--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
-    "name": "nyc-firehouses",
-    "private": true,
-    "version": "0.0.0",
-    "type": "commonjs",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview",
-        "start": "node server.js"
+  "name": "nyc-firehouses",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-    "dependencies": {
-        "express": "^4.18.2",
-        "vue": "^3.2.45",
-        "vue-router": "^4.1.6"
+  "dependencies": {
+    "mapbox-gl": "^2.15.0",
+    "vue": "^3.3.4"
   },
-    "devDependencies": {
-        "@vitejs/plugin-vue": "^4.0.0",
-        "eslint": "^8.30.0",
-        "eslint-plugin-vue": "^9.8.0",
-        "stylelint": "^14.16.0",
-        "stylelint-config-standard": "^29.0.0",
-        "vite": "^4.0.0"
-  },
-    "engines": {
-            "node": "18.12.1",
-            "npm": "8.19.2"
-    }
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.2.3",
+    "vite": "^4.4.5"
+  }
 }
