Modify .gitignore and vite.config.js after changing to Composition API and map.

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-# dist
-# dist-ssr
+dist
+dist-ssr
 *.local
 
 # Editor directories and files
@@ -22,7 +22,3 @@ node_modules
 *.njsproj
 *.sln
 *.sw?
-
-# Linting files
-.eslintrc.json
-.stylelintrc.json
